<resources>
    <string name="app_name">TajMahal</string>
    <string name="restaurant">Restaurant</string>
    <string name="maps_not_installed">Google Maps is not installed.</string>
    <string name="phone_not_found">No app found for making calls.</string>
    <string name="no_browser_found">No browser found.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="on_site">Dine-in</string>
    <string name="take_away">Takeaway</string>
    <string name="tajmahal_typical_food_description">A typical Indian dish from Taj Mahal restaurant.</string>
    <string name="button_phone">Call the restaurant</string>
    <string name="button_website">Visit the restaurant\'s website</string>
    <string name="button_adress">View the restaurant\'s location on map</string>
    <string name="icon_gps">Icon GPS</string>
    <string name="icone_weekday">Icone weekday</string>
    <string name="icone_website">Icone website</string>
    <string name="phone_icon">Phone icon</string>


    <!--All my added string -->
    <string name="restaurant_total_reviews_format_txt" translatable="false">(%1s)</string>

    <string name="bouton_valider_text">Validate</string>
    <string name="comment_hint_txt">Share details of your\n experience here.</string>
    <string name="review_error_txt_too_long">Thin ! Your comment seems to be a little too long.</string>
    <string name="review_error_no_txt_comment">Oops ! It looks like you forgot to write a comment.</string>
    <string name="review_error_no_rating">Don\'t forget to give a 1–5 star rating with your review.</string>
    <string name="review_error_generic">An error has occurred, please try again.</string>
    <string name="reviews_frag_title">Taj Mahal</string>
    <string name="content_description_avatar">The avatar of the review creator.</string>
    <string name="contentDescription_backArrow">An arrow to return to the previous screen.</string>
    <string name="contentDescription_user_avatar">A picture of the current user of the app.</string>
    <string name="leave_review_button_txt">Laisser un avis</string>

</resources>
