<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_review_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.reviews.ReviewsFragment">
    <!--[Header]-->
    <!-- I chose not to use a classic ToolBar to get as close as possible to the client model-->
    <!-- The use of a classic toolbar seems to break the continuity of the design choice of the DetailsFragment screen (which uses a windows FLAG FULL SCREEN).  -->
    <!--Go back arrows : to return to the previous screen -->
    <ImageView
        android:id="@+id/goBackArrow"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/goback_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_screen"
        android:contentDescription="@string/contentDescription_backArrow" />
    <!--Main Title -->
    <TextView
        android:id="@+id/tv_title_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/jakarta_bold"
        android:gravity="center"
        android:text="@string/reviews_frag_title"
        android:textAlignment="center"
        android:textColor="@color/fragment_title_color"
        android:textSize="@dimen/fragment_title_text_size"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/review_coordinatorLayout"
        app:layout_constraintStart_toEndOf="@+id/goBackArrow"
        app:layout_constraintTop_toTopOf="parent" />
    <!--[Body]-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/review_coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Use of collapsingToolbarLayout to contain the user new reviews section -->
        <!--allows us to properly compartmentalize the different parts of our layout
        by providing an effect when the user scrolls to bring a certain focus on the part in use. -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/review_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/review_collapser_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/translucent_color"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:scrimAnimationDuration="1000">
                <!-- ["Add a review" section] -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5">

                    <!-- User avatar : I use a CardView to get a rounded picture displayed via cardCornerRadius attribut-->
                    <!-- (obviously I can equally reshape the loaded image directly via a Picasso dedicated method) -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_UserAvatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        app:cardCornerRadius="40dp"
                        app:layout_constraintBottom_toTopOf="@+id/cvCommentEntry"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_user_name">
                        <!--The user picture-->
                        <ImageView
                            android:id="@+id/iv_UserAvatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/contentDescription_user_avatar"
                            android:scaleType="centerCrop"
                            tools:ignore="ImageContrastCheck"
                            tools:src="@tools:sample/avatars" />
                    </androidx.cardview.widget.CardView>

                    <!-- User name-->
                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/jakarta_semibold"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/gray_color"
                        android:textSize="@dimen/name_text_size"
                        android:typeface="normal"
                        app:autoSizeTextType="none"
                        app:layout_constraintBottom_toTopOf="@+id/rb_UserRating"
                        app:layout_constraintStart_toEndOf="@+id/cv_UserAvatar"
                        tools:ignore="TextSizeCheck"
                        tools:text="Manon Garcia" />

                    <!-- User rating: I use a small notation bar to maintain general consistency of the layout
                     and facilitate the use of material style -->
                    <RatingBar
                        android:id="@+id/rb_UserRating"
                        style="@android:style/Widget.Material.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:progressTint="@color/rating_stars_color"
                        android:rating="0"
                        android:secondaryProgressTint="@android:color/transparent"
                        android:stepSize="1"
                        app:layout_constraintBottom_toTopOf="@+id/cvCommentEntry"
                        app:layout_constraintStart_toStartOf="@+id/tv_user_name" />

                    <!--Validate button -->
                    <Button
                        android:id="@+id/button_Valider_Comment"
                        style="@style/ThemeOverlay.Material3.Button"
                        android:layout_width="74dp"
                        android:layout_height="37dp"
                        android:layout_marginEnd="9dp"
                        android:backgroundTint="@color/red"
                        android:enabled="true"
                        android:fontFamily="@font/jakarta_semibold"
                        android:padding="0dp"
                        android:text="@string/bouton_valider_text"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/Button_text_size"
                        android:typeface="sans"
                        app:layout_constraintBottom_toBottomOf="@+id/rb_UserRating"
                        app:layout_constraintEnd_toEndOf="@+id/cvCommentEntry"
                        app:layout_constraintTop_toTopOf="@+id/tv_user_name"
                        app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
                        tools:ignore="TouchTargetSizeCheck" />

                    <!-- Comment entry : Version with "cardView + EditText"
                     This allows me to get as close as possible to the client's model
                      where an OutLinedBox of a TextInputLayout would need to be customized
                       to achieve the correct radius of the container in particular-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvCommentEntry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="15dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/cv_UserAvatar">
                        <!--Comment entry field -->
                        <EditText
                            android:id="@+id/tv_user_comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="13dp"
                            android:background="@color/white"
                            android:fontFamily="@font/jakarta_regular"
                            android:hint="@string/comment_hint_txt"
                            android:inputType="textMultiLine"
                            android:textColor="@color/gray_color"
                            android:textColorHint="@color/text_hint_default_color"
                            android:textSize="@dimen/user_commentary_text_size"
                            android:typeface="sans"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                            android:importantForAutofill="no" />

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- ["View all reviews" section] -->
        <!--NestedScrollView is here to allow the CollapsingLayout working if the reviews list to display
         is empty or smaller than the screen hight  -->
        <androidx.core.widget.NestedScrollView
            android:elevation="3dp"
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_anchorGravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <!--Recycler to display the list of reviews -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReviews"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>